// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typography /> marginTop, marginRight, marginBottom, marginLeft 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-right: 20px;
  margin-left: 20px;
}

<span
  className="c0"
  href=""
/>
`;

exports[`<Typography /> text variants when compoenet renders without variant props it applies default styles 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

<span
  className="c0"
  href=""
/>
`;

exports[`<Typography /> text variants when variant="title" renders with proper font-size 1`] = `
.c0 {
  font-size: 32px;
  font-weight: 700;
  line-height: 1.25;
}

<span
  className="c0"
  href=""
/>
`;

exports[`<Typography /> textAlign props sets text-align 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
  text-align: center;
}

<span
  className="c0"
  href=""
/>
`;
